--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,8 +1,51 @@
-.mainContainer{
+.nav {
+    background: linear-gradient(rgba(255, 228, 196, 0.61), rgba(255, 228, 196, 0.61));
     display: flex;
-    flex-direction: row;
     justify-content: space-around;
-    border-radius: 15px;
-    border: 1px solid black;
-    
+    margin-top: 1%;
+    box-shadow: 0 0 5px white;
+}
+.nav img {
+    opacity: .5;
+    width: 100px;
+    height: 100px;
+    transition: .3s;
+    cursor: pointer;
+}
+.nav span {
+    color: rgba(0, 0, 0, 0.349);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
+}
+.nav img:hover {
+    opacity: 1;
+}
+.nav input {
+    margin-top: 40px;
+    font-size: 15px;
+    border-radius: 8px;
+}
+
+.botones {
+    display: contents;
+}
+
+.botones button{
+    margin-top: 40px;
+    font-size: 18px;
+    border-radius: 10px;
+    background-color: transparent;
+    cursor: pointer;
+    transition: .3s;
+    box-shadow: 0 0 10px rgb(0, 0, 0);
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-style: italic;
+}
+.botones button:hover {
+    background-color: rgba(0, 0, 0, 0.568);
+    color:rgba(255, 228, 196, 0.61);
+    transform: translate(0, .5px);
+    box-shadow: 0 0 10px white;
 }
