--- a/client/src/pages/landing/Landing.module.css
+++ b/client/src/pages/landing/Landing.module.css
@@ -1,5 +1,5 @@
 .landing{
-    background: linear-gradient(rgba(255, 222, 182, 0.2), rgba(255, 222, 182, 0.2)), url(../../img/fondoLanding.jpg);
+    background: linear-gradient(rgba(255, 222, 182, 0.2), rgba(255, 222, 182, 0.2)), url(../../img/fondooscuroasd.jpg);
     background-size: cover;
     background-position: center center;
     height: 100vh;
