--- a/client/src/pages/form/form.module.css
+++ b/client/src/pages/form/form.module.css
@@ -179,6 +179,75 @@
     text-shadow: 0 0 1px rgba(165, 0, 0, 0.836);
   }
   
+  .types{
+    height: 250px;
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+.typesOrder{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    
+}
+
+.container {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 13px;
+}
+
+ul{
+    margin-block-start: 20px;
+    margin-block-end: 1px;
+    padding-inline-start: 1px;
+}
+ul.ksCboxtags li{
+    display: inline;
+}
+ul.ksCboxtags li label{
+    background-color: rgba(187, 221, 208, 0.9);
+    border: 2px solid rgba(139, 139, 139, .3);
+    color: #000000;
+    border-radius: 25px;
+    white-space: nowrap;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    transition: all .2s;
+}
+ul.ksCboxtags li label {
+    padding: 8px 12px;
+    cursor: pointer;
+}
+ul.ksCboxtags li label::before {
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    font-weight: 900;
+    font-size: 12px;
+    padding: 2px 6px 2px 2px;
+    transition: transform .3s ease-in-out;
+}
+ul.ksCboxtags li input[type="checkbox"]:checked + label::before {
+    transform: rotate(-360deg);
+    transition: transform .3s ease-in-out;
+}
+ul.ksCboxtags li input[type="checkbox"]:checked + label {
+    border: 2px solid #f0c305;
+    background-color: #f0c305;
+    color: #060202;
+    transition: all .2s;
+}
+ul.ksCboxtags li input[type="checkbox"] {
+    display: absolute;
+}
+ul.ksCboxtags li input[type="checkbox"] {
+    position: absolute;
+    opacity: 0;
+}
+
 /* .inputs {
 
 }
